--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "node-sass-chokidar": "^1.3.3",
     "react": "^16.4.2",
     "react-accessible-accordion": "^2.4.4",
+    "react-bootstrap": "^0.32.1",
     "react-dom": "^16.4.2",
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.3.1",
