--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.4",
+    "react-transition-group": "^1.2.1",
     "redux": "^4.0.0",
     "redux-promise": "^0.6.0",
     "tv4": "^1.3.0"
