--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@nivo/bar": "^0.42.1",
+    "@nivo/calendar": "^0.43.0",
     "@progress/kendo-data-query": "^1.4.1",
     "@progress/kendo-drawing": "^1.5.7",
     "@progress/kendo-react-animation": "^1.2.0",
