--- a/package.json
+++ b/package.json
@@ -20,12 +20,15 @@
     "@progress/kendo-react-pdf": "^1.2.0",
     "@progress/kendo-react-popup": "^1.2.0",
     "@progress/kendo-theme-default": "^2.54.1",
+    "@progress/kendo-ui": "^2018.2.822",
+    "@progress/kendo-window-react-wrapper": "^2018.2.719",
     "axios": "^0.18.0",
     "bootstrap": "^3.3.7",
     "classnames": "^2.2.6",
     "enzyme": "^3.3.0",
     "enzyme-adapter-react-16": "^1.1.1",
     "hammerjs": "^2.0.8",
+    "jquery": "^3.3.1",
     "moxios": "^0.4.0",
     "node-sass-chokidar": "^1.3.3",
     "react": "^16.4.2",
