--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "react-transition-group": "^1.2.1",
     "redux": "^4.0.0",
     "redux-promise": "^0.6.0",
+    "redux-thunk": "^2.3.0",
     "tv4": "^1.3.0"
   },
   "scripts": {
