--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "redux": "^4.0.0",
     "redux-promise": "^0.6.0",
     "redux-thunk": "^2.3.0",
+    "rxjs": "^6.3.2",
     "tv4": "^1.3.0"
   },
   "scripts": {
