--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.4",
+    "react-select": "^2.0.0",
     "react-transition-group": "^1.2.1",
     "redux": "^4.0.0",
     "redux-promise": "^0.6.0",
