--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-accessible-accordion": "^2.4.4",
     "react-bootstrap": "^0.32.1",
     "react-dom": "^16.4.2",
+    "react-excel-workbook": "0.0.4",
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.4",
