updating commentary functionality

--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react-bootstrap": "^0.32.1",
     "react-dom": "^16.4.2",
     "react-excel-workbook": "0.0.4",
+    "react-images-upload": "^1.2.3",
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.4",
