Made components for Financial Squares and List

--- a/.gitignore
+++ b/.gitignore
@@ -82,4 +82,6 @@ typings/
 # next.js build output
 .next
 
-data.json
+#Initial State for Infosol Local Azure Server
+#Used for http requests URL 
+variables.js
