--- a/package.json
+++ b/package.json
@@ -49,6 +49,8 @@
     "redux-promise": "^0.6.0",
     "redux-thunk": "^2.3.0",
     "rxjs": "^6.3.2",
+    "semantic-ui-css": "^2.4.1",
+    "semantic-ui-react": "^0.83.0",
     "tv4": "^1.3.0"
   },
   "scripts": {
