--- a/.gitignore
+++ b/.gitignore
@@ -85,10 +85,10 @@ typings/
 
 #Initial State for Infosol Local Azure Server
 #Used for http requests URL 
-variables.js
+src/variables.js
 
 #OKTA
-.samples.config.js
+src/.samples.config.js
 
 #ENV
-.env
+./.env
