--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "classnames": "^2.2.6",
     "enzyme": "^3.3.0",
     "enzyme-adapter-react-16": "^1.1.1",
+    "fast-xml-parser": "^3.12.5",
     "hammerjs": "^2.0.8",
     "jquery": "^3.3.1",
     "moxios": "^0.4.0",
