--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "react-excel-workbook": "0.0.4",
     "react-images-upload": "^1.2.3",
     "react-redux": "^5.1.0",
+    "react-responsive-carousel": "^3.1.43",
     "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.4",
     "react-select": "^2.1.1",
