--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "jquery": "^3.3.1",
     "moxios": "^0.4.0",
     "node-sass-chokidar": "^1.3.4",
+    "rc-easyui": "^0.1.1",
     "react": "^16.6.1",
     "react-accessible-accordion": "^2.4.5",
     "react-bootstrap": "^0.32.4",
