--- a/package.json
+++ b/package.json
@@ -42,9 +42,11 @@
     "react-images-upload": "^1.2.3",
     "react-redux": "^5.1.0",
     "react-responsive-carousel": "^3.1.43",
+    "react-rnd": "^9.0.4",
     "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.4",
     "react-select": "^2.1.1",
+    "react-split-pane": "^0.1.84",
     "react-transition-group": "^1.2.1",
     "redux": "^4.0.1",
     "redux-promise": "^0.6.0",
