--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "homepage": "http://localhost:8551/apps/rtbalpha/",
   "dependencies": {
-    "@okta/okta-react": "^1.1.4",
+    "@okta/okta-react": "1.0.2",
     "@okta/okta-signin-widget": "^2.13.0",
     "@progress/kendo-data-query": "^1.5.0",
     "@progress/kendo-drawing": "^1.5.7",
