--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "practice",
   "version": "0.1.0",
   "private": true,
-  "homepage": "http://localhost:4200",
+  "homepage": "http://vm1.infosol.com:8551/apps/rtbalpha",
   "dependencies": {
     "@okta/okta-react": "1.0.2",
     "@okta/okta-signin-widget": "^2.13.0",
