--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "private": true,
   "homepage": "http://localhost:8551/apps/rtbalpha",
   "dependencies": {
-    "@okta/okta-react": "1.0.2",
+    "@okta/okta-react": "^1.2.0",
+    "@okta/okta-signin-widget": "^2.17.0",
     "@progress/kendo-drawing": "^1.5.7",
     "@progress/kendo-react-buttons": "^1.3.0",
     "@progress/kendo-react-charts": "^1.3.0",
@@ -23,9 +24,9 @@
     "jquery": "^3.3.1",
     "moxios": "^0.4.0",
     "node-sass-chokidar": "^1.3.4",
-    "react": "^16.6.1",
+    "react": "^16.8.4",
     "react-bootstrap": "^0.32.4",
-    "react-dom": "^16.6.1",
+    "react-dom": "^16.8.4",
     "react-excel-workbook": "0.0.4",
     "react-images-upload": "^1.2.3",
     "react-redux": "^5.1.0",
