--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "classnames": "^2.2.6",
     "enzyme": "^3.7.0",
     "enzyme-adapter-react-16": "^1.6.0",
+    "file-saver": "^2.0.1",
     "hammerjs": "^2.0.8",
+    "html2canvas": "^1.0.0-alpha.12",
     "jquery": "^3.3.1",
     "moxios": "^0.4.0",
     "node-sass-chokidar": "^1.3.4",
