--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "practice",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://rtb.corp.adobe.com",
+  "homepage": "https://rtb-dev.corp.adobe.com",
   "dependencies": {
     "@okta/okta-react": "^1.2.0",
     "@okta/okta-signin-widget": "^2.17.0",
@@ -22,6 +22,7 @@
     "enzyme-adapter-react-16": "^1.6.0",
     "file-saver": "^2.0.1",
     "hammerjs": "^2.0.8",
+    "history": "^4.9.0",
     "html2canvas": "^1.0.0-alpha.12",
     "jquery": "^3.3.1",
     "moxios": "^0.4.0",
@@ -31,6 +32,7 @@
     "react-dom": "^16.8.4",
     "react-excel-workbook": "0.0.4",
     "react-images-upload": "^1.2.3",
+    "react-piwik": "^1.6.0",
     "react-redux": "^5.1.0",
     "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.4",
