--- a/package.json
+++ b/package.json
@@ -3,42 +3,43 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@okta/okta-react": "^1.2.0",
-    "@okta/okta-signin-widget": "^2.17.0",
-    "@progress/kendo-drawing": "^1.5.7",
+    "@okta/okta-react": "^1.2.3",
+    "@okta/okta-signin-widget": "^2.21.0",
+    "@progress/kendo-drawing": "^1.5.12",
     "@progress/kendo-react-buttons": "^1.3.0",
     "@progress/kendo-react-charts": "^1.3.0",
     "@progress/kendo-react-dialogs": "^1.3.0",
     "@progress/kendo-react-dropdowns": "^1.3.0",
-    "@progress/kendo-react-intl": "^1.3.0",
+    "@progress/kendo-react-inputs": "^3.3.0",
+    "@progress/kendo-react-intl": "^3.3.0",
     "@progress/kendo-react-layout": "^1.3.0",
     "@progress/kendo-theme-default": "^2.59.0",
     "@progress/kendo-ui": "^2018.3.1107",
-    "axios": "^0.18.0",
-    "bootstrap": "^3.3.7",
+    "axios": "^0.18.1",
+    "bootstrap": "^3.4.1",
     "classnames": "^2.2.6",
-    "enzyme": "^3.7.0",
-    "enzyme-adapter-react-16": "^1.6.0",
-    "file-saver": "^2.0.1",
+    "enzyme": "^3.10.0",
+    "enzyme-adapter-react-16": "^1.14.0",
+    "file-saver": "^2.0.2",
     "hammerjs": "^2.0.8",
     "history": "^4.9.0",
-    "html2canvas": "^1.0.0-alpha.12",
-    "jquery": "^3.3.1",
+    "html2canvas": "^1.0.0-rc.3",
+    "jquery": "^3.4.1",
     "moxios": "^0.4.0",
-    "node-sass-chokidar": "^1.3.4",
-    "react": "^16.8.4",
+    "node-sass-chokidar": "^1.3.5",
+    "react": "^16.9.0",
     "react-bootstrap": "^0.32.4",
-    "react-dom": "^16.8.4",
+    "react-dom": "^16.9.0",
     "react-excel-workbook": "0.0.4",
-    "react-images-upload": "^1.2.3",
-    "react-picky": "^4.4.5",
+    "react-images-upload": "^1.2.7",
+    "react-picky": "^4.5.2",
     "react-piwik": "^1.6.0",
     "react-redux": "^5.1.0",
     "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.4",
-    "react-select": "^2.1.1",
-    "redux": "^4.0.1",
-    "rxjs": "^6.3.3",
+    "react-select": "^2.4.4",
+    "redux": "^4.0.4",
+    "rxjs": "^6.5.3",
     "tv4": "^1.3.0"
   },
   "scripts": {
